--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
     "ant-design-vue": "^3.3.0-beta.4",
     "axios": "^1.2.2",
     "pinia": "^2.0.28",
+    "random-useragent": "^0.5.0",
     "sass": "^1.57.1",
+    "useragent-generator": "^1.1.1-amkt-22079-finish.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
