--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "useragent-generator": "^1.1.1-amkt-22079-finish.0",
     "vue": "^3.2.45",
     "vue-boring-avatars": "^1.3.0",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
