--- a/client/package.json
+++ b/client/package.json
@@ -12,18 +12,17 @@
     "@zougt/vite-plugin-theme-preprocessor": "^1.4.8",
     "ant-design-vue": "^3.3.0-beta.4",
     "axios": "^1.2.2",
+    "color": "^4.2.3",
     "less": "^4.1.3",
     "pinia": "^2.0.28",
-    "random-useragent": "^0.5.0",
-    "safe-string": "^1.0.1",
     "sass": "^1.57.1",
-    "useragent-generator": "^1.1.1-amkt-22079-finish.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "@zougt/some-loader-utils": "^1.4.3",
     "unplugin-vue-components": "^0.22.12",
     "vite": "^4.0.0"
   }
