--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "pinia": "^2.0.28",
     "sass": "^1.57.1",
     "vue": "^3.2.45",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
     "vue-toastification": "^2.0.0-rc.5"
   },
