Fixed download links 2

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,1 +1,5 @@
 VITE_APP_API_BASE_URL=http://31.31.199.29/api/v1
+VITE_APP_API_DOWNLOAD_URL=http://31.31.199.29/download
+
+VITE_APP_I18N_LOCALE=ru
+VITE_APP_I18N_FALLBACK_LOCALE=ru
